Initialize welcome workflow with a placeholder job
Added a placeholder job to the welcome workflow.

--- a/.github/workflows/0-welcome.yml
+++ b/.github/workflows/0-welcome.yml
@@ -4,3 +4,10 @@ on:
     types: [opened]
 permissions:
   pull-requests: write
+
+jobs:
+  noop:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Placeholder step
+        run: echo "Workflow initialized"
